--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
+    "package.json": "^2.0.1",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
